# sensor-nhargrex

./: .gitignore  LICENSE  README.md
Sensor-Client/dht22_rs/: Cargo.toml
Sensor-Client/dht22_rs/src/: main.rs
Sensor-Client/nhargrex/: read_dht22.py  sensors_nhargrex_firestore.py  setup.py
Sensor-Client/nhargrex/nhargrex.egg-info/: PKG-INFO  SOURCES.txt
Sensor-Client/src/sensor-nhargrex/: Cargo.toml
Sensor-Client/src/sensor-nhargrex/src/: README.md  main.rs  read_dht22.rs
Sensor/app/: build.gradle.kts
Sensor/app/src/androidTest/java/com/nhargrex/sensor/: ExampleInstrumentedTest.kt
Sensor/app/src/main/: AndroidManifest.xml
Sensor/app/src/main/java/com/nhargrex/sensor/: MainActivity.kt
Sensor/app/src/main/res/layout/: activity_main.xml  notification.xml
Sensor/app/src/main/res/values/: strings.xml
Sensor/app/src/test/java/com/nhargrex/sensor/: ExampleUnitTest.kt
Sensor/gradle/: libs.versions.toml
Sensor/gradle/wrapper/: gradle-wrapper.properties
sensor/: build.gradle.kts  settings.gradle.kts
sensor-client/nhargrex/: LICENSE  README.md  read_dht22.py  sensors_nhargrex_firestore.py  setup.py
sensor-client/src/sensor-nhargrex/: Cargo.toml
sensor-client/src/sensor-nhargrex/src/: dht22.rs  main.rs
sensor-cloud/: .firebaserc  firestore.rules
sensor/app/: build.gradle.kts
sensor/app/src/main/: AndroidManifest.xml
sensor/app/src/main/res/layout/: activity_main.xml  notification.xml
sensor/app/src/main/res/values/: strings.xml
sensor/gradle/: libs.versions.toml
sensor/gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
