[package]
name = "sensor-nhargrex"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
lazy_static = "1.4.0"
once_cell = "1.19.0"
rppal = "0.17.1"
unflappable = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.21.1"
features = ["auto-initialize"]
